RESOLVED FIXED253450
`DocumentMarkerController::possiblyHasMarkers` can be incorrect following animated marker removal
https://bugs.webkit.org/show_bug.cgi?id=253450
Summary `DocumentMarkerController::possiblyHasMarkers` can be incorrect following ani...
Aditya Keerthi
Reported 2023-03-06 10:27:19 PST
Attachments
Aditya Keerthi
Comment 1 2023-03-06 10:38:22 PST
EWS
Comment 2 2023-03-06 14:15:49 PST
Committed 261291@main (55e9a6904b90): <https://commits.webkit.org/261291@main> Reviewed commits have been landed. Closing PR #11121 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.